--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
+<!-- Репозиторий с исходным кодом: https://github.com/Glovindan/medpult-request-insurance-letter -->
 <!-- подключение стилей -->
 <link href="./style.css" rel="stylesheet" inline />
 
 <!-- область html -->
 <body>
-	<div id="root"></div>
+	<div id="insurance-letter-root"></div>
 </body>
 
 <!-- подключение скриптов -->
